--- a/react-tdd/package.json
+++ b/react-tdd/package.json
@@ -2,7 +2,7 @@
   "name": "react-tdd",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://AlecSands.github.io/ReactAndJest/",
+  "homepage": "https://AlecSands.github.io/ReactAndJest",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
